--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title: Mixed Models Workshop
 # choose from Bootstrap Icons in _includes/bootstrap-icons
 # find names on https://icons.getbootstrap.com/
 # some options: code-slash file-code gear tools lightblub book bookmark-star
-title-icon: emoji-sunglasses
+title-icon: table
 # description, keywords, and image for meta tags
 # these do not visibility appear on the pages, but used for SEO
 description: ""
